# Insurance-Claim-Support-AI-Agent-with-LangMem-and-RAG

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  experiments.ipynb  main.py  pyproject.toml  test.py
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/: dependencies.py
customer_support_agent/api/routers/: __init__.py  health.py  knowledge.py  memory.py  tickets.py
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integrations/memory/: __init__.py  langmem_store.py
customer_support_agent/integrations/rag/: __init__.py  chroma_kb.py
customer_support_agent/integrations/tools/: __init__.py  support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  customer.py  tickets.py
customer_support_agent/schemas/: __init__.py
customer_support_agent/services/: copilot_service.py  draft_service.py
knowledge_base/: insurance-auto-claims-fnol-intake-checklist.md  insurance-auto-coverage-and-deductible-guidelines.md  insurance-auto-required-documents-by-claim-type.md  insurance-claims-fraud-risk-indicators.md  insurance-claims-settlement-sla-and-communication.md
tests/: test_draft_status_smoke.py  test_langmem_store.py  test_simple.py
