[project]
name = "insurance-claim-support-ai-agent-with-langmem-and-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langmem>=0.0.30",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.13.3",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
